# claude-monitor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/claude-monitor/: Cargo.toml
crates/claude-monitor/src/: bootstrap.rs  main.rs
crates/monitor-core/: Cargo.toml
crates/monitor-core/src/: calculations.rs  data_processors.rs  error.rs  formatting.rs  lib.rs  models.rs  notifications.rs  p90.rs  plans.rs  pricing.rs  settings.rs  time_utils.rs
crates/monitor-data/: Cargo.toml
crates/monitor-data/src/: aggregator.rs  analysis.rs  analyzer.rs  lib.rs  reader.rs
crates/monitor-runtime/: Cargo.toml
crates/monitor-runtime/src/: data_manager.rs  lib.rs  orchestrator.rs  session_monitor.rs
crates/monitor-ui/: Cargo.toml
crates/monitor-ui/src/: app.rs  lib.rs  session_view.rs  table_view.rs  themes.rs
crates/monitor-ui/src/components/: header.rs  indicators.rs  mod.rs  progress_bar.rs
