[package]
name = "claude-monitor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "claude-monitor"
path = "src/main.rs"

[dependencies]
monitor-core = { path = "../monitor-core" }
monitor-data = { path = "../monitor-data" }
monitor-ui = { path = "../monitor-ui" }
monitor-runtime = { path = "../monitor-runtime" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
