[package]
name = "monitor-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
thiserror.workspace = true
anyhow.workspace = true
iana-time-zone = { workspace = true }
regex.workspace = true
tracing.workspace = true
clap.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
