[package]
name = "monitor-data"
version.workspace = true
edition.workspace = true

[dependencies]
monitor-core = { path = "../monitor-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing = "0.1"
walkdir = { workspace = true }
regex = "1.11"
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
