[package]
name = "monitor-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
monitor-core = { path = "../monitor-core" }
monitor-data = { path = "../monitor-data" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true }
tempfile.workspace = true
