[package]
name = "monitor-ui"
version.workspace = true
edition.workspace = true

[dependencies]
monitor-core = { path = "../monitor-core" }
monitor-runtime = { path = "../monitor-runtime" }
ratatui.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
tokio.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
serde_json.workspace = true

[dev-dependencies]
